backend implementation of user uploader
