# components/db-manager/pkg/models/schema.go
@@ -12,6 +12,7 @@ CREATE TABLE IF NOT EXISTS known_locations (
     latitude FLOAT NOT NULL, -- Latitude as signed float
     ref_type TEXT DEFAULT 'spot' CHECK (ref_type IN ('spot')), -- Constraint for ref_type
     ref_id INT DEFAULT 0,
+    ref_user_uploader INT DEFAULT 0,
     created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP, -- Automatically generated
     updated_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP -- Automatically managed by trigger
 );
@@ -21,17 +22,7 @@ CREATE TABLE IF NOT EXISTS spots (
     id SERIAL UNIQUE NOT NULL, -- Auto-incremented integer ID
     name TEXT NOT NULL,
     description TEXT,
-    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP, -- Automatically generated
-    updated_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP -- Automatically managed by trigger
-);
-
-CREATE TABLE IF NOT EXISTS tasks (
-    uuid UUID PRIMARY KEY DEFAULT uuid_generate_v4(), -- UUID as primary key
-    id SERIAL UNIQUE NOT NULL, -- Auto-incremented integer ID
-    ref_type TEXT DEFAULT 'spot' CHECK (ref_type IN ('spot')), -- Constraint for ref_type
-    ref_id INT DEFAULT 0,
-    name TEXT NOT NULL,
-    description TEXT,
+    ref_user_uploader INT DEFAULT 0,
     created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP, -- Automatically generated
     updated_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP -- Automatically managed by trigger
 );
@@ -45,6 +36,18 @@ CREATE TABLE IF NOT EXISTS attachments (
     description TEXT,
     content_type TEXT DEFAULT 'image/jpeg', -- Constraint for ref_type
     url TEXT NOT NULL,
+    ref_user_uploader INT DEFAULT 0,
+    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP, -- Automatically generated
+    updated_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP -- Automatically managed by trigger
+);
+
+CREATE TABLE IF NOT EXISTS users (
+    uuid UUID PRIMARY KEY DEFAULT uuid_generate_v4(),  -- UUID as primary key
+    id SERIAL UNIQUE NOT NULL,                         -- Auto-incremented integer ID
+    ext_ref UUID NOT NULL,                                -- User UUID from keycloak
+    email TEXT NOT NULL,                               -- Email of the user
+    role TEXT CHECK (role IN ('owner', 'contributor', 'admin', 'target', 'hybrid')),  -- Role with constraints
+    name TEXT NOT NULL,                  -- Preferred Username in keycloak
     created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP, -- Automatically generated
     updated_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP -- Automatically managed by trigger
 );
@@ -67,11 +70,11 @@ CREATE OR REPLACE TRIGGER update_known_locations_updated_at
 BEFORE UPDATE ON known_locations
 FOR EACH ROW EXECUTE FUNCTION update_updated_at_column();
 
-CREATE OR REPLACE TRIGGER update_tasks_updated_at
-BEFORE UPDATE ON tasks
-FOR EACH ROW EXECUTE FUNCTION update_updated_at_column();
-
 CREATE OR REPLACE TRIGGER update_attachments_updated_at
 BEFORE UPDATE ON attachments
+FOR EACH ROW EXECUTE FUNCTION update_updated_at_column();
+
+CREATE OR REPLACE TRIGGER update_users_updated_at
+BEFORE UPDATE ON users
 FOR EACH ROW EXECUTE FUNCTION update_updated_at_column();
 `
